Actualizacion codigo estructura

--- a/ropa.html
+++ b/ropa.html
@@ -1,228 +1,254 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <title>Ropa</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <div class="row">
-            <div class="col-md-8">
-                <h1>MiniMarket.com</h1>
+      <div class="row">
+        <div class="col-md-8">
+          <h1>MiniMarket.com</h1>
+        </div>
+        <div class="col-md-4">
+          <div class="inicioSesion">
+            <a href="iniciarSesion.html" id="inicio">Iniciar Sesion</a>
+          </div>
+        </div>
+      </div>
+
+      <!--barra-->
+      <div class="row">
+        <div class="col-md-12">
+          <div class="barra">
+            <a href="index.html" id="vistas">Inicio</a>
+            <a href="ropa.html" id="vistas">Ropa</a>
+            <a href="accesorios.html" id="vistas">Accesorios</a>
+            <a href="carrito.html" id="vistas">Carrito de Compras</a>
+          </div>
+        </div>
+      </div>
+
+      <!--Titulo de la seccion-->
+
+      <div class="row">
+        <div class="col-md-12">
+          <div class="introduccion">
+            <h2>Ropa Deportiva para toda la familia</h2>
+            <p>
+              Disfruta de toda la variedad de ropa deportiva que encuentras
+              aqui. Encontraras los detalles de cada prenda, si la quieres
+              adquirir da click en el boton comprar para agregarlo en tu lista
+              en el carrito de compras. Recuerda que para comprar debes primero
+              iniciar sesion.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <!--titulo-->
+      <div class="row">
+        <div class="col-md-12">
+          <h5>Ropa para dama</h5>
+        </div>
+      </div>
+
+      <!--targeticas-->
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card">
+            <img
+              class="card-img-top"
+              src="vista/imagenes/blusa.jpg"
+              alt="Card image cap"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Blusa</h5>
+              <p class="card-text">
+                -Blusa negra talla unica. -Original nike. -$ 150000.
+              </p>
+              <button type="submit">Comprar</button>
             </div>
-            <div class="col-md-4">
-                <div class="inicioSesion">
-                    <a href="iniciarSesion.html" id="inicio">Iniciar Sesion</a>
-                </div>
-            </div>
+          </div>
         </div>
 
-        <!--barra-->
-        <div class="row">
+        <div class="col-md-4">
+          <div class="card">
+            <img
+              class="card-img-top"
+              src="vista/imagenes/conjuntos.jpg"
+              alt="Card image cap"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Conjunto</h5>
+              <p class="card-text">
+                -Chaqueta y pantalon. -Impermeable. -$ 80000
+              </p>
+              <button type="submit">Comprar</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="card">
+            <img
+              class="card-img-top"
+              src="vista/imagenes/top.jpg"
+              alt="Card image cap"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Top y leguis</h5>
+              <p class="card-text">
+                -Diferentes tallas. -En tres colores. -$ 50000
+              </p>
+              <button type="submit">Comprar</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!--titulo-->
+      <div class="row">
+        <div class="col-md-12">
+          <h5>Ropa para caballero</h5>
+        </div>
+      </div>
+
+      <!--targetas-->
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card">
+            <img
+              class="card-img-top"
+              src="vista/imagenes/a.jpg"
+              alt="Card image cap"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Sudadera</h5>
+              <p class="card-text">-Talla unica -Negra y gris. -$ 45000.</p>
+              <button type="submit">Comprar</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="card">
+            <img
+              class="card-img-top"
+              src="vista/imagenes/b.jpg"
+              alt="Card image cap"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Buso</h5>
+              <p class="card-text">-Original de nike. -Unico color. -$50000.</p>
+              <button type="submit">Comprar</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="card">
+            <img
+              class="card-img-top"
+              src="vista/imagenes/c.jpg"
+              alt="Card image cap"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Conjunto</h5>
+              <p class="card-text">
+                -Camisa y pantalon. -Colección limitada. -$ 80000.
+              </p>
+              <button type="submit">Comprar</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!--titulo-->
+      <div class="row">
+        <div class="col-md-12">
+          <h5>Ropa para niños y niñas</h5>
+        </div>
+      </div>
+
+      <!--targeticas-->
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card">
+            <img
+              class="card-img-top"
+              src="vista/imagenes/ninoI.jpg"
+              alt="Card image cap"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Conjunto Bascket</h5>
+              <p class="card-text">
+                -Conjunto para niño y niña. -Especial para bascket. -$ 40000.
+              </p>
+              <button type="submit">Comprar</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="card">
+            <img
+              class="card-img-top"
+              src="vista/imagenes/ninoII.jpg"
+              alt="Card image cap"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Conjunto football</h5>
+              <p class="card-text">
+                -Conjunto para niños. -Especial para football. -$ 40000.
+              </p>
+              <button type="submit">Comprar</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="card">
+            <img
+              class="card-img-top"
+              src="vista/imagenes/ninoIII.jpg"
+              alt="Card image cap"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Conjunto shick</h5>
+              <p class="card-text">
+                -Para niño y niña. -Unicos colores. -$ 60000.
+              </p>
+              <button type="submit">Comprar</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!--banner-->
+      <center>
+        <div id="banner">
+          <div class="row">
             <div class="col-md-12">
-                <div class="barra">
-                            <a href="index.html" id="vistas">Inicio</a>
-                           <a href="ropa.html" id="vistas">Ropa</a>
-                            <a href="accesorios.html" id="vistas">Accesorios</a>
-                            <a href="carrito.html" id="vistas">Carrito de Compras</a>
-                </div>
+              <p>Contactos: 3150008935-2334443</p>
+              <p>linea nacional: 01800032323134</p>
+              <p>Quejas y reclamos: minimarket.comercioweb@gmail.com</p>
+              <p>Dererchos de autor Reservados</p>
+              <p>MiniMarket web</p>
             </div>
+          </div>
         </div>
-
-        <!--Titulo de la seccion-->
-
-        <div class="row">
-            <div class="col-md-12">
-                <div class="introduccion">
-                    <h2>Ropa Deportiva para toda la familia</h2>
-                    <p>Disfruta de toda la variedad de ropa deportiva que encuentras aqui.
-                        Encontraras los detalles de cada prenda, si la quieres adquirir da click en el boton comprar
-                        para agregarlo en tu lista en el carrito de compras.
-                        Recuerda que para comprar debes primero iniciar sesion.
-                    </p>
-                </div>
-            </div>
-        </div>
-
-        <!--titulo-->
-        <div class="row">
-                <div class="col-md-12">
-                    <h5>Ropa para dama</h5>
-                </div>
-            </div>
-
-        <!--targeticas-->
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card">
-                    <img class="card-img-top" src="vista/imagenes/blusa.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Blusa</h5>
-                        <p class="card-text">-Blusa negra talla unica.
-                                            -Original nike.
-                                            -$ 150000.
-                        </p>
-                        <button type="submit">Comprar</button>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="card">
-                    <img class="card-img-top" src="vista/imagenes/conjuntos.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Conjunto</h5>
-                        <p class="card-text">-Chaqueta y pantalon.
-                                            -Impermeable.
-                                            -$ 80000</p>
-                        <button type="submit">Comprar</button>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="card">
-                    <img class="card-img-top" src="vista/imagenes/top.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Top y leguis</h5>
-                        <p class="card-text">-Diferentes tallas.
-                                            -En tres colores.
-                                            -$ 50000</p>
-                        <button type="submit">Comprar</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-        <!--titulo-->
-        <div class="row">
-            <div class="col-md-12">
-                <h5>Ropa para caballero</h5>
-            </div>
-        </div>
-
-
-        <!--targetas-->
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card">
-                    <img class="card-img-top" src="vista/imagenes/a.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Sudadera</h5>
-                        <p class="card-text">-Talla unica
-                                            -Negra y gris.
-                                            -$ 45000.</p>
-                        <button type="submit">Comprar</button>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="card">
-                    <img class="card-img-top" src="vista/imagenes/b.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Buso</h5>
-                        <p class="card-text">-Original de nike.
-                                            -Unico color.
-                                            -$50000.</p>
-                        <button type="submit">Comprar</button>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="card">
-                    <img class="card-img-top" src="vista/imagenes/c.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Conjunto</h5>
-                        <p class="card-text">-Camisa y pantalon.
-                                            -Colección limitada.
-                                            -$ 80000.</p>
-                       <button type="submit">Comprar</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!--titulo-->
-        <div class="row">
-            <div class="col-md-12">
-                <h5>Ropa para niños y niñas</h5>
-            </div>
-        </div>
-
-        <!--targeticas-->
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card">
-                    <img class="card-img-top" src="vista/imagenes/ninoI.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Conjunto Bascket</h5>
-                        <p class="card-text">-Conjunto para niño y niña.
-                                            -Especial para bascket.
-                                            -$ 40000.
-                        </p>
-                        <button type="submit">Comprar</button>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="card">
-                    <img class="card-img-top" src="vista/imagenes/ninoII.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Conjunto football</h5>
-                        <p class="card-text">-Conjunto  para niños.
-                                            -Especial para football.
-                                            -$ 40000.</p>
-                        <button type="submit">Comprar</button>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="card">
-                    <img class="card-img-top" src="vista/imagenes/ninoIII.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Conjunto shick</h5>
-                        <p class="card-text">-Para niño y niña.
-                                            -Unicos colores.
-                                            -$ 60000.</p>
-                        <button type="submit">Comprar</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!--banner-->
-        <center>
-            <div id="banner">
-                <div class="row">
-
-                    <div class="col-md-12">
-
-                            <p>Contactos:  3150008935-2334443 </p>
-                            <p> linea nacional:  01800032323134</p>
-                            <p> Quejas y reclamos:  minimarket.comercioweb@gmail.com</p>
-                            <p> Dererchos de autor Reservados</p>
-                            <p>MiniMarket web</p>
-
-
-
-                    </div>
-
-                </div>
-            </div>
-        </center>
+      </center>
     </div>
-</body>
-<script type="text/javascript" src="includes/jquery/jquery-3.3.1.js"></script>
-<link rel="stylesheet" type="text/css" href="includes/bootsrap 4/css/bootstrap.min.css">
-<script type="text/javascript" src="vista/js/general.js"></script>
-<link rel="stylesheet" href="vista/js/general.js">
-<link rel="stylesheet" href="vista/css/ropa.css">
-
+  </body>
+  <script type="text/javascript" src="includes/jquery/jquery-3.3.1.js"></script>
+  <link
+    rel="stylesheet"
+    type="text/css"
+    href="includes/bootsrap 4/css/bootstrap.min.css"
+  />
+  <script type="text/javascript" src="vista/js/general.js"></script>
+  <link rel="stylesheet" href="vista/js/general.js" />
+  <link rel="stylesheet" href="vista/css/ropa.css" />
 </html>
