--- a/index.html
+++ b/index.html
@@ -1,228 +1,307 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <title>MiniMarket</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <div class="row">
-            <div class="col-md-8">
-                <h1>MiniMarket.com</h1>
-            </div>
-            <div class="col-md-4">
-                <div class="inicioSesion">
-                    <a href="iniciarSesion.html" id="inicio">Iniciar Sesion</a>
-                </div>
-            </div>
-        </div> 
+      <div class="row">
+        <div class="col-md-8">
+          <h1>MiniMarket.com</h1>
+        </div>
+        <div class="col-md-4">
+          <div class="inicioSesion">
+            <a href="iniciarSesion.html" id="inicio">Iniciar Sesion</a>
+          </div>
+        </div>
+      </div>
 
-        <div class="row">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="barra">
+            <a href="index.html" id="vistas">Inicio</a>
+            <a href="ropa.html" id="vistas">Ropa</a>
+            <a href="accesorios.html" id="vistas">Accesorios</a>
+            <a href="carrito.html" id="vistas">Carrito de Compras</a>
+          </div>
+        </div>
+      </div>
+
+      <!--espacio para poner la imagen que cambia-->
+      <div class="row">
+        <div class="col-md-12">
+          <div
+            id="carouselExampleControls"
+            class="carousel slide"
+            data-ride="carousel"
+          >
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img
+                  class="d-block w-100"
+                  src="vista/imagenes/bas.jpg"
+                  alt="First slide"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  class="d-block w-100"
+                  src="vista/imagenes/bas2.jpg"
+                  alt="Second slide"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  class="d-block w-100"
+                  src="vista/imagenes/bas3.jpg"
+                  alt="Third slide"
+                />
+              </div>
+            </div>
+            <a
+              class="carousel-control-prev"
+              href="#carouselExampleControls"
+              role="button"
+              data-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a
+              class="carousel-control-next"
+              href="#carouselExampleControls"
+              role="button"
+              data-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <!--titulo-->
+      <div class="row">
+        <div class="col-md-12">
+          <h5>Tendencia deportiva</h5>
+        </div>
+      </div>
+
+      <!--targeticas-->
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card">
+            <img
+              class="card-img-top"
+              src="vista/imagenes/tendenciaI.jpg"
+              alt="Card image cap"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Crossfit</h5>
+              <p class="card-text">
+                Consiste en la ejecución de un circuito de ejercicios de
+                potencia, de habilidad y aeróbicos que te permitirán desarrollar
+                tu condición atlética de una manera rápida y eficiente.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="card">
+            <img
+              class="card-img-top"
+              src="vista/imagenes/tendenciaII.jpg"
+              alt="Card image cap"
+            />
+            <div class="card-body">
+              <h5 class="card-title">fly yoga</h5>
+              <p class="card-text">
+                Acelera nuestro metabolismo para aumentar el consumo de
+                calorías. Se alternan momentos de reposo con auténticas piruetas
+                en el aire.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="card">
+            <img
+              class="card-img-top"
+              src="vista/imagenes/tendenciaIII.jpg"
+              alt="Card image cap"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Barra</h5>
+              <p class="card-text">
+                Puedes tonificar los musculos, haciendo movimientos sencillos.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--titulo-->
+      <div class="row">
+        <div class="col-md-12">
+          <h5>Nuevos deportes</h5>
+        </div>
+      </div>
+      <!--targetas-->
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card">
+            <img
+              class="card-img-top"
+              src="vista/imagenes/nuevodeporte.jpg"
+              alt="Card image cap"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Aqua boxing</h5>
+              <p class="card-text">
+                Consiste en hacer todos los movimientos del boxeo dentro del
+                agua. La resistencia del agua permite contornear brazos y
+                piernas.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="card">
+            <img
+              class="card-img-top"
+              src="vista/imagenes/barra.jpg"
+              alt="Card image cap"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Barra Americana</h5>
+              <p class="card-text">
+                Ejercicio donde se ejercitan casi todos los grupos musculares,
+                tonificando también la piel y mejorando la flexibilidad y la
+                fuerza en brazos y piernas.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="card">
+            <img
+              class="card-img-top"
+              src="vista/imagenes/esparta.jpg"
+              alt="Card image cap"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Carrera Espartana</h5>
+              <p class="card-text">
+                Es una carrera de 5, 13 ó 21 kilómetros repletos de obstáculos
+                de diferente índole. Toda una experiencia para vivir y
+                disfrutar.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!--titulo-->
+      <div class="row">
+        <div class="col-md-12">
+          <h5>Nuevos productos</h5>
+        </div>
+      </div>
+
+      <!--targeticas-->
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card">
+            <img
+              class="card-img-top"
+              src="vista/imagenes/manillas.jpg"
+              alt="Card image cap"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Manilla</h5>
+              <p class="card-text">
+                -Puedes conectarla con aplicaciones de tu smartphone.<br />
+                -Diferentes colores.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="card">
+            <img
+              class="card-img-top"
+              src="vista/imagenes/balones.jpg"
+              alt="Card image cap"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Balones</h5>
+              <p class="card-text">
+                -Balones de alta calidad 100% originales.<br />
+                -Diferentes colores.<br />
+                -incluye mochila para guardar.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="card">
+            <img
+              class="card-img-top"
+              src="vista/imagenes/kit.jpg"
+              alt="Card image cap"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Kit</h5>
+              <p class="card-text">
+                -Nuevo kit deportivo limitado.<br />
+                -Especial para deportistas.<br />
+                -Precio muy economico.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!--banner-->
+      <center>
+        <div id="banner">
+          <div class="row">
             <div class="col-md-12">
-                <div class="barra">
-                    <a href="index.html" id="vistas">Inicio</a>    
-                    <a href="ropa.html" id="vistas">Ropa</a>
-                    <a href="accesorios.html" id="vistas">Accesorios</a>
-                    <a href="carrito.html" id="vistas">Carrito de Compras</a>
-                 </div>
+              <p>Contactos: 3150008935-2334443</p>
+              <p>linea nacional: 01800032323134</p>
+              <p>Quejas y reclamos: minimarket.comercioweb@gmail.com</p>
+              <p>Dererchos de autor Reservados</p>
+              <p>MiniMarket web</p>
             </div>
+          </div>
         </div>
-
-
-
-        <!--espacio para poner la imagen que cambia-->
-        <div class="row">
-            <div class="col-md-12">
-                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img class="d-block w-100" src="vista/imagenes/bas.jpg" alt="First slide">
-                      </div>
-                      <div class="carousel-item">
-                        <img class="d-block w-100" src="vista/imagenes/bas2.jpg" alt="Second slide">
-                      </div>
-                      <div class="carousel-item">
-                        <img class="d-block w-100" src="vista/imagenes/bas3.jpg" alt="Third slide">
-                      </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Next</span>
-                    </a>
-                  </div>
-            </div>
-        </div>
-
-
-        <!--titulo-->
-        <div class="row">
-            <div class="col-md-12">
-                <h5>Tendencia deportiva</h5>
-            </div>
-        </div>
-
-
-
-        <!--targeticas-->
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card">
-                    <img class="card-img-top" src="vista/imagenes/tendenciaI.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Crossfit</h5>
-                        <p class="card-text">Consiste en la ejecución de un circuito de ejercicios de
-                             potencia, de habilidad y aeróbicos que te permitirán desarrollar tu condición 
-                             atlética de una manera rápida y eficiente.</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="card">
-                    <img class="card-img-top" src="vista/imagenes/tendenciaII.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">fly yoga</h5>
-                        <p class="card-text">Acelera nuestro metabolismo para aumentar el consumo de calorías.
-                             Se alternan momentos de reposo con auténticas piruetas en el aire.</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="card">
-                    <img class="card-img-top" src="vista/imagenes/tendenciaIII.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Barra</h5>
-                        <p class="card-text">Puedes tonificar los musculos, haciendo movimientos sencillos.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!--titulo-->
-        <div class="row">
-            <div class="col-md-12">
-                <h5>Nuevos deportes</h5>
-            </div>
-        </div>
-        <!--targetas-->
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card">
-                    <img class="card-img-top" src="vista/imagenes/nuevodeporte.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Aqua boxing</h5>
-                        <p class="card-text">Consiste en hacer todos los movimientos del boxeo dentro del
-                             agua. La resistencia del agua permite contornear brazos y piernas.</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="card">
-                    <img class="card-img-top" src="vista/imagenes/barra.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Barra Americana</h5>
-                        <p class="card-text">Ejercicio donde se ejercitan casi todos los grupos musculares, 
-                            tonificando también la piel y mejorando la flexibilidad y la fuerza en brazos y piernas.</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="card">
-                    <img class="card-img-top" src="vista/imagenes/esparta.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Carrera Espartana</h5>
-                        <p class="card-text">Es una carrera de 5, 13 ó 21 kilómetros repletos de obstáculos
-                             de diferente índole. Toda una experiencia para vivir y disfrutar.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!--titulo-->
-        <div class="row">
-            <div class="col-md-12">
-                <h5>Nuevos productos</h5>
-            </div>
-        </div>
-
-        <!--targeticas-->
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card">
-                    <img class="card-img-top" src="vista/imagenes/manillas.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Manilla</h5>
-                        <p class="card-text">-Puedes conectarla con aplicaciones de tu smartphone.<br>
-                                            -Diferentes colores.
-                        </p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="card">
-                    <img class="card-img-top" src="vista/imagenes/balones.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Balones</h5>
-                        <p class="card-text">-Balones de alta calidad 100% originales.<br>
-                                            -Diferentes colores.<br>
-                                            -incluye mochila para guardar.
-                        </p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="card">
-                    <img class="card-img-top" src="vista/imagenes/kit.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Kit</h5>
-                        <p class="card-text">-Nuevo kit deportivo limitado.<br>
-                                            -Especial para deportistas.<br>
-                                            -Precio muy economico. </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!--banner-->
-        <center>
-            <div id="banner">
-                <div class="row">
-
-                    <div class="col-md-12">
-
-                            <p>Contactos:  3150008935-2334443 </p>
-                            <p> linea nacional:  01800032323134</p>
-                            <p> Quejas y reclamos:  minimarket.comercioweb@gmail.com</p>
-                            <p> Dererchos de autor Reservados</p>
-                            <p>MiniMarket web</p>
-
-
-
-                    </div>
-
-                </div>
-            </div>
-        </center>
+      </center>
     </div>
-
-
-
-</body>
-<script type="text/javascript" src="includes/jquery/jquery-3.3.1.js"></script>
-<link rel="stylesheet" type="text/css" href="includes/bootsrap 4/css/bootstrap.min.css">
-<script type="text/javascript" src="includes/bootsrap 4/js/bootstrap.min.js" ></script>
-<script type="text/javascript" src="vista/js/general.js"></script>
-<link rel="stylesheet" href="vista/js/general.js">
-<link rel="stylesheet" href="vista/css/index.css">
-
+  </body>
+  <script type="text/javascript" src="includes/jquery/jquery-3.3.1.js"></script>
+  <link
+    rel="stylesheet"
+    type="text/css"
+    href="includes/bootsrap 4/css/bootstrap.min.css"
+  />
+  <script
+    type="text/javascript"
+    src="includes/bootsrap 4/js/bootstrap.min.js"
+  ></script>
+  <script type="text/javascript" src="vista/js/general.js"></script>
+  <link rel="stylesheet" href="vista/js/general.js" />
+  <link rel="stylesheet" href="vista/css/index.css" />
 </html>
