--- a/carrito.html
+++ b/carrito.html
@@ -13,8 +13,9 @@
                 <h1>MiniMarket.com</h1>
             </div>
             <div class="col-md-4">
-                <br><br>
-                <center><a href="iniciarSesion.html" id="inicio">Iniciar Sesion</a></center>
+                <div class="inicioSesion">
+                    <a href="iniciarSesion.html" id="inicio">Iniciar Sesion</a>
+                </div>
             </div>
         </div>
 
@@ -22,38 +23,26 @@
 
         <div class="row">
             <div class="col-md-12">
-                <div id="barra">
-                    <div class="row">
-                        <div class="col-md-3">
-                            <center><a href="index.html" id="vistas">Inicio</a></center>
-                        </div>
-                        <div class="col-md-3">
-                            <center><a href="ropa.html" id="vistas">Ropa</a></center>
-                        </div>
-                        <div class="col-md-3">
-                            <center> <a href="accesorios.html" id="vistas">Accesorios</a></center>
-                        </div>
-                        <div class="col-md-3">
-                            <center><a href="carrito.html" id="vistas">Carrito de Compras</a></center>
-                        </div>
+                <div class="barra">
+                        <a href="index.html" id="vistas">Inicio</a>
+                        <a href="ropa.html" id="vistas">Ropa</a>
+                        <a href="accesorios.html" id="vistas">Accesorios</a>
+                        <a href="carrito.html" id="vistas">Carrito de Compras</a>
+                </div>
+            </div>
+        </div>
+
+        <!--titulo2-->
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="introduccion">
+                        <h3>TU LISTA DE COMPRAS!</h3>
+                        <p>Aqui puedes ver tu lista de los productos que has agregado al carrito de compras, podras editar
+                            la cantidad de unidades que compraras por cada producto, eliminar productos que ya no
+                            necesitas, insertar más productos.</p>
                     </div>
                 </div>
             </div>
-        </div><br><br><br>
-
-        <!--titulo2-->
-        <center>
-            <div class="row">
-
-                <div class="col-md-12">
-                    <h3>TU LISTA DE COMPRAS!</h3>
-                    <p>Aqui puedes ver tu lista de los productos que has agregado al carrito de compras, podras editar
-                        la cantidad de unidades que compraras por cada producto, eliminar productos que ya no
-                        necesitas, insertar más productos.</p>
-                </div>
-            </div>
-        </center>
-        <br><br><br>
 
         <!--Tabla-->
 
@@ -72,17 +61,15 @@
 
                     </tbody>
                 </table>
-                <br><br><br>
+                <br>
                 <!--boton para mmostrar contenido-->
-
-                <input type="button" id="mostrar" value="Mostrar" class="btn btn-primary">
-                <input type="button" id="editar" value="Editar" class="btn btn-primary">
-                <input type="button" id="eliminar" value="Quitar" class="btn btn-primary">
-
+                <button type="submit">Mostrar</button>
+                <button type="submit">Editar</button>
+                <button type="submit">Eliminar</button>
+                <button type="submit">Comprar</button>
             </div>
         </div>
 
-        <br><br><br><br>
         <!--banner-->
         <center>
             <div id="banner">
@@ -95,11 +82,7 @@
                             <p> Quejas y reclamos:  minimarket.comercioweb@gmail.com</p>
                             <p> Dererchos de autor Reservados</p>
                             <p>MiniMarket web</p>
-
-
-
                     </div>
-
                 </div>
             </div>
         </center>
