--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </div>
         <div class="col-md-4">
           <div class="inicioSesion">
-            <a href="iniciarSesion.html" id="inicio">Iniciar Sesion</a>
+            <a href="/vista/html/iniciarSesion.html" id="inicio">Iniciar Sesion</a>
           </div>
         </div>
       </div>
@@ -22,9 +22,9 @@
         <div class="col-md-12">
           <div class="barra">
             <a href="index.html" id="vistas">Inicio</a>
-            <a href="ropa.html" id="vistas">Ropa</a>
-            <a href="accesorios.html" id="vistas">Accesorios</a>
-            <a href="carrito.html" id="vistas">Carrito de Compras</a>
+            <a href="vista/html/ropa.html" id="vistas">Ropa</a>
+            <a href="/vista/html/accesorios.html" id="vistas">Accesorios</a>
+            <a href="/vista/html/carrito.html" id="vistas">Carrito de Compras</a>
           </div>
         </div>
       </div>
