--- a/vista/html/registro.html
+++ b/vista/html/registro.html
@@ -26,7 +26,7 @@
                 <div id="barra">
                     <div class="row">
                         <div class="col-md-3">
-                            <center><a href="index.html" id="vistas">Inicio</a></center>
+                            <center><a href="../../index.html" id="vistas">Inicio</a></center>
                         </div>
                         <div class="col-md-3">
                             <center><a href="ropa.html" id="vistas">Ropa</a></center>
@@ -104,10 +104,14 @@
 
     </div>
 </body>
-<script type="text/javascript" src="includes/jquery/jquery-3.3.1.js"></script>
-<link rel="stylesheet" type="text/css" href="includes/bootsrap 4/css/bootstrap.min.css">
-<script type="text/javascript" src="vista/js/general.js"></script>
-<link rel="stylesheet" href="vista/js/general.js">
-<link rel="stylesheet" href="vista/css/registro.css">
+<script type="text/javascript" src="../../includes/jquery/jquery-3.3.1.js"></script>
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="../../includes/bootsrap 4/css/bootstrap.min.css"
+/>
+<script type="text/javascript" src="../js/general.js"></script>
+<link rel="stylesheet" href="../js/general.js" />
+<link rel="stylesheet" href="../css/registro.css">
 
 </html>
