--- a/vista/html/ropa.html
+++ b/vista/html/ropa.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Accesorios</title>
+    <title>Ropa</title>
   </head>
+
   <body>
     <div class="container">
       <div class="row">
@@ -11,9 +12,9 @@
           <h1>MiniMarket.com</h1>
         </div>
         <div class="col-md-4">
-            <div class="inicioSesion">
-                <a href="../html/iniciarSesion.html" id="inicio">Iniciar Sesion</a>
-            </div>
+          <div class="inicioSesion">
+            <a href="iniciarSesion.html" id="inicio">Iniciar Sesion</a>
+          </div>
         </div>
       </div>
 
@@ -21,7 +22,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="barra">
-            <a href="index.html" id="vistas">Inicio</a>
+            <a href="../../index.html" id="vistas">Inicio</a>
             <a href="ropa.html" id="vistas">Ropa</a>
             <a href="accesorios.html" id="vistas">Accesorios</a>
             <a href="carrito.html" id="vistas">Carrito de Compras</a>
@@ -34,14 +35,13 @@
       <div class="row">
         <div class="col-md-12">
           <div class="introduccion">
-            <h2>
-              Utiliza accesorios para acompañar tus actividades deportivas
-            </h2>
+            <h2>Ropa Deportiva para toda la familia</h2>
             <p>
-              Disfruta de la variedad de accesorios que aqui podras encontrar.
-              Cada uno de los accesorios ofrecidos son de alta calidad, ultima
-              tendencia en tecnologia para que acompañes tus actividades
-              diarias.
+              Disfruta de toda la variedad de ropa deportiva que encuentras
+              aqui. Encontraras los detalles de cada prenda, si la quieres
+              adquirir da click en el boton comprar para agregarlo en tu lista
+              en el carrito de compras. Recuerda que para comprar debes primero
+              iniciar sesion.
             </p>
           </div>
         </div>
@@ -50,7 +50,7 @@
       <!--titulo-->
       <div class="row">
         <div class="col-md-12">
-          <h5>Accesorios personales</h5>
+          <h5>Ropa para dama</h5>
         </div>
       </div>
 
@@ -60,15 +60,15 @@
           <div class="card">
             <img
               class="card-img-top"
-              src="vista/imagenes/casco.jpg"
+              src="../imagenes/blusa.jpg"
               alt="Card image cap"
             />
             <div class="card-body">
-              <h5 class="card-title">Casco</h5>
+              <h5 class="card-title">Blusa</h5>
               <p class="card-text">
-                -Casco unisex. -En diferentes colores. -$ 50000.
+                -Blusa negra talla unica. -Original nike. -$ 150000.
               </p>
-              <button id="agregar" onclick="agregar()">Comprar</button>
+              <button type="submit">Comprar</button>
             </div>
           </div>
         </div>
@@ -77,15 +77,15 @@
           <div class="card">
             <img
               class="card-img-top"
-              src="vista/imagenes/beisball.jpg"
+              src="../imagenes/conjuntos.jpg"
               alt="Card image cap"
             />
             <div class="card-body">
-              <h5 class="card-title">Guante</h5>
+              <h5 class="card-title">Conjunto</h5>
               <p class="card-text">
-                -Color unico. -No incluye pelota. -$ 20000.
+                -Chaqueta y pantalon. -Impermeable. -$ 80000
               </p>
-              <button id="agregar" onclick="agregar()">Comprar</button>
+              <button type="submit">Comprar</button>
             </div>
           </div>
         </div>
@@ -94,13 +94,15 @@
           <div class="card">
             <img
               class="card-img-top"
-              src="vista/imagenes/guantes.jpg"
+              src="../imagenes/top.jpg"
               alt="Card image cap"
             />
             <div class="card-body">
-              <h5 class="card-title">Guantes</h5>
-              <p class="card-text">-Marca nike. -Solo dos colores. -$ 20000</p>
-              <button id="agregar" onclick="agregar()">Comprar</button>
+              <h5 class="card-title">Top y leguis</h5>
+              <p class="card-text">
+                -Diferentes tallas. -En tres colores. -$ 50000
+              </p>
+              <button type="submit">Comprar</button>
             </div>
           </div>
         </div>
@@ -109,7 +111,7 @@
       <!--titulo-->
       <div class="row">
         <div class="col-md-12">
-          <h5>Accesorios para equipos</h5>
+          <h5>Ropa para caballero</h5>
         </div>
       </div>
 
@@ -119,13 +121,13 @@
           <div class="card">
             <img
               class="card-img-top"
-              src="vista/imagenes/aI.jpg"
+              src="../imagenes/a.jpg"
               alt="Card image cap"
             />
             <div class="card-body">
-              <h5 class="card-title">Buseo</h5>
-              <p class="card-text">-Unico color. -Para adultos. -$ 15000.</p>
-              <button id="agregar" onclick="agregar()">Comprar</button>
+              <h5 class="card-title">Sudadera</h5>
+              <p class="card-text">-Talla unica -Negra y gris. -$ 45000.</p>
+              <button type="submit">Comprar</button>
             </div>
           </div>
         </div>
@@ -134,13 +136,13 @@
           <div class="card">
             <img
               class="card-img-top"
-              src="vista/imagenes/aII.jpg"
+              src="../imagenes/b.jpg"
               alt="Card image cap"
             />
             <div class="card-body">
-              <h5 class="card-title">Sostenedor</h5>
-              <p class="card-text">-Unico color. -Adaptable. -$ 15000</p>
-              <button id="agregar" onclick="agregar()">Comprar</button>
+              <h5 class="card-title">Buso</h5>
+              <p class="card-text">-Original de nike. -Unico color. -$50000.</p>
+              <button type="submit">Comprar</button>
             </div>
           </div>
         </div>
@@ -149,15 +151,15 @@
           <div class="card">
             <img
               class="card-img-top"
-              src="vista/imagenes/aIII.jpg"
+              src="../imagenes/c.jpg"
               alt="Card image cap"
             />
             <div class="card-body">
-              <h5 class="card-title">Brasaletes</h5>
+              <h5 class="card-title">Conjunto</h5>
               <p class="card-text">
-                -Solo en 2 colores. -Para maquinas aerobicas. -$ 30000
+                -Camisa y pantalon. -Colección limitada. -$ 80000.
               </p>
-              <button id="agregar" onclick="agregar()">Comprar</button>
+              <button type="submit">Comprar</button>
             </div>
           </div>
         </div>
@@ -166,7 +168,7 @@
       <!--titulo-->
       <div class="row">
         <div class="col-md-12">
-          <h5>Accesorios adicionales</h5>
+          <h5>Ropa para niños y niñas</h5>
         </div>
       </div>
 
@@ -176,13 +178,15 @@
           <div class="card">
             <img
               class="card-img-top"
-              src="vista/imagenes/acI.jpg"
+              src="../imagenes/ninoI.jpg"
               alt="Card image cap"
             />
             <div class="card-body">
-              <h5 class="card-title">Camara deportiva</h5>
-              <p class="card-text">-Adaptable. -Unico color. -$ 200000</p>
-              <button id="agregar" onclick="agregar()">Comprar</button>
+              <h5 class="card-title">Conjunto Bascket</h5>
+              <p class="card-text">
+                -Conjunto para niño y niña. -Especial para bascket. -$ 40000.
+              </p>
+              <button type="submit">Comprar</button>
             </div>
           </div>
         </div>
@@ -191,16 +195,15 @@
           <div class="card">
             <img
               class="card-img-top"
-              src="vista/imagenes/acII.jpg"
+              src="../imagenes/ninoII.jpg"
               alt="Card image cap"
             />
             <div class="card-body">
-              <h5 class="card-title">Lentes</h5>
+              <h5 class="card-title">Conjunto football</h5>
               <p class="card-text">
-                -Especiales para deportistas. -Unico color. -Rayos-v.
-                -Economicas. -Edicion limitada. -$ 50000.
+                -Conjunto para niños. -Especial para football. -$ 40000.
               </p>
-              <button id="agregar" onclick="agregar()">Comprar</button>
+              <button type="submit">Comprar</button>
             </div>
           </div>
         </div>
@@ -209,15 +212,15 @@
           <div class="card">
             <img
               class="card-img-top"
-              src="vista/imagenes/acIII.jpg"
+              src="../imagenes/ninoIII.jpg"
               alt="Card image cap"
             />
             <div class="card-body">
-              <h5 class="card-title">Mochila</h5>
+              <h5 class="card-title">Conjunto shick</h5>
               <p class="card-text">
-                -Tamaño medio. -3 unicos colores. -$ 25000.
+                -Para niño y niña. -Unicos colores. -$ 60000.
               </p>
-              <button id="agregar" onclick="agregar()">Comprar</button>
+              <button type="submit">Comprar</button>
             </div>
           </div>
         </div>
@@ -239,13 +242,13 @@
       </center>
     </div>
   </body>
-  <script type="text/javascript" src="includes/jquery/jquery-3.3.1.js"></script>
+  <script type="text/javascript" src="../../includes/jquery/jquery-3.3.1.js"></script>
   <link
     rel="stylesheet"
     type="text/css"
-    href="includes/bootsrap 4/css/bootstrap.min.css"
+    href="../../includes/bootsrap 4/css/bootstrap.min.css"
   />
-  <script type="text/javascript" src="vista/js/general.js"></script>
-  <link rel="stylesheet" href="vista/js/general.js" />
-  <link rel="stylesheet" href="vista/css/accesorios.css" />
+  <script type="text/javascript" src="../js/general.js"></script>
+  <link rel="stylesheet" href="../js/general.js" />
+  <link rel="stylesheet" href="../css/ropa.css" />
 </html>
