--- a/vista/html/carrito.html
+++ b/vista/html/carrito.html
@@ -24,7 +24,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="barra">
-                        <a href="index.html" id="vistas">Inicio</a>
+                        <a href="../../index.html" id="vistas">Inicio</a>
                         <a href="ropa.html" id="vistas">Ropa</a>
                         <a href="accesorios.html" id="vistas">Accesorios</a>
                         <a href="carrito.html" id="vistas">Carrito de Compras</a>
@@ -90,10 +90,14 @@
     </div>
 </body>
 
-<script type="text/javascript" src="includes/jquery/jquery-3.3.1.js"></script>
-<link rel="stylesheet" type="text/css" href="includes/bootsrap 4/css/bootstrap.min.css">
-<script type="text/javascript" src="vista/js/general.js"></script>
-<link rel="stylesheet" href="vista/js/general.js">
-<link rel="stylesheet" href="vista/css/carrito.css">
+<script type="text/javascript" src="../../includes/jquery/jquery-3.3.1.js"></script>
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="../../includes/bootsrap 4/css/bootstrap.min.css"
+/>
+<script type="text/javascript" src="../js/general.js"></script>
+<link rel="stylesheet" href="../js/general.js" />
+<link rel="stylesheet" href="../css/carrito.css">
 
 </html>
