--- a/vista/html/iniciarSesion.html
+++ b/vista/html/iniciarSesion.html
@@ -23,7 +23,7 @@
                     <div id="barra">
                         <div class="row">
                             <div class="col-md-3">
-                            <center><a href="index.html" id="vistas">Inicio</a></center>
+                            <center><a href="../../index.html" id="vistas">Inicio</a></center>
                             </div>
                             <div class="col-md-3">
                             <center><a href="ropa.html" id="vistas">Ropa</a></center>
@@ -66,6 +66,7 @@
                 parte inferior de la pantalla.</p><br>
             <p>-Utiliza tu correo para el registro en nuestro portal.</p><br>
            <a href="registro.html"> <input type="button" id="registrar"  value="Registrarme"  class="btn btn-primary"></a>
+           <a href="../html/productos.html">Admin</a>
         </div>
         </div><br><br>
            
@@ -96,10 +97,14 @@
 
     </div>
 </body>
-<script type="text/javascript" src="includes/jquery/jquery-3.3.1.js"></script>
-<link rel="stylesheet" type="text/css" href="includes/bootsrap 4/css/bootstrap.min.css">
-<script type="text/javascript" src="vista/js/general.js"></script>
-<link rel="stylesheet" href="vista/js/general.js">
-<link rel="stylesheet" href="vista/css/sesion.css">
+<script type="text/javascript" src="../../includes/jquery/jquery-3.3.1.js"></script>
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="../../includes/bootsrap 4/css/bootstrap.min.css"
+/>
+<script type="text/javascript" src="../js/general.js"></script>
+<link rel="stylesheet" href="../js/general.js" />
+<link rel="stylesheet" href="../css/sesion.css">
 
 </html>
